--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="logobrand" href="#"><img src="images/logo@2x.png" height="33px"/></a>
+          <a class="navbar-brand" id="logobrand" href="#"><img src="images/icon.png" height="33px"/></a>
         </div>
 
         <div class="navbar-collapse collapse" ng-controller="NavCtrl">
