--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/beans.js"></script>
         <script src="scripts/controllers/plots.js"></script>
+        <script src="scripts/controllers/plot.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/services/jmx_refresher.js"></script>
         <script src="scripts/services/config.js"></script>
