Show selected beans in selection screen

--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/directives/plot.js"></script>
         <script src="scripts/directives/tree.js"></script>
         <script src="scripts/directives/prototype.js"></script>
+        <script src="scripts/directives/plotkey.js"></script>
         <!-- endbuild -->
 </body>
 </html>
