Add url on bean page

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
         <script src="scripts/controllers/plots.js"></script>
         <script src="scripts/controllers/plot.js"></script>
         <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/controllers/config.js"></script>
         <script src="scripts/controllers/refresh.js"></script>
         <script src="scripts/services/jmx_refresher.js"></script>
         <script src="scripts/services/config.js"></script>
