--- a/app/index.html
+++ b/app/index.html
@@ -39,18 +39,21 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default nav-fixed-top" role="navigation" ng-controller="NavCtrl">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="logobrand" href="#"><img src="images/icon.png" height="33px"/></a>
+          <a class="navbar-brand" href="#" id="logobrand"><img src="images/icon.png" height="33px"/></a>
         </div>
 
-        <div class="navbar-collapse collapse" ng-controller="NavCtrl">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li ng-class="{active: ($route.current.tabname == 'beans')}">
               <a class="pointable" ng-click="goToBookmarkableUrl('beans')">Select Data</a>
@@ -70,10 +73,9 @@
               </a>
             </li>
           </ul>
-        </div><!--/.nav-collapse -->
-
-      </div>
-    </div>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
     <div class="container" ng-view=""></div>
 
@@ -91,7 +93,7 @@
               <div class="form-group">
                 <label for="jmx-url" class="col-sm-2 control-label">JMX URL</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" id="jmx-url" ng-model="settings.url" disabled>
+                  <input type="text" class="form-control" id="jmx-url" ng-model="copy.url" disabled>
                 </div>
                 <div class="col-sm-2">
                   <a class="btn btn-default">Edit</a>
@@ -101,7 +103,7 @@
                 <label for="refresh-period" class="col-sm-2 control-label">Refresh Period</label>
                 <div class="col-sm-3">
                   <div class="input-group">
-                    <input type="text" class="form-control" id="refresh-period" ng-model="settings.refresh">
+                    <input type="number" class="form-control" id="refresh-period" ng-model="copy.refresh">
                     <span class="input-group-addon">ms</span>
                   </div>
                 </div>
@@ -112,11 +114,12 @@
             <hr/>
 
             <h5>Raw:</h5>
-            <pre>{{settings}}</pre>
+            <pre>proposed: {{copy}}</pre>
+            <pre>current: {{settings}}</pre>
 
             <div class="modal-footer">
               <a class="btn btn-default" data-dismiss="modal">Close</a>
-              <a ng-class="{btn: true, 'btn-primary': true, disabled: is_synchronized}" ng-click="commit()">Commit</a>
+              <a ng-class="{btn: true, 'btn-primary': true, disabled: synchronized}" ng-click="commit()">Commit</a>
             </div>
           </div>
         </div>
