Fix up UI, add ability to clear data in main page

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" id="logobrand"><img src="images/icon.png" height="33px"/></a>
+          <a class="navbar-brand pointable" ng-click="goToUrl('home')" id="logobrand"><img src="images/icon.png" height="33px"/></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
