--- a/app/index.html
+++ b/app/index.html
@@ -39,101 +39,12 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <nav class="navbar navbar-default nav-fixed-top" role="navigation" ng-controller="NavCtrl">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand pointable" ng-click="goToUrl('home')" id="logobrand"><img src="images/icon.png" height="33px"/></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li ng-class="{active: ($route.current.tabname == 'beans')}">
-              <a class="pointable" ng-click="goToBookmarkableUrl('beans')">Select Data</a>
-            </li>
-            <li ng-class="{active: ($route.current.tabname == 'plots')}">
-              <a class="pointable" ng-click="goToBookmarkableUrl('plots')">View Plots</a>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-            <li ng-class="{active: ($route.current.tabname == 'faq')}">
-              <a class="pointable" ng-click="goToUrl('faq', false)">FAQ</a>
-            </li>
-            <li ng-controller="ConfigCtrl">
-              <a class="pointable" data-toggle="modal" data-target="#settings-modal">
-                <i class="fa fa-cog"></i> Settings
-              </a>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <div ng-include src="'views/nav.html'"></div>
 
     <div class="container" ng-view=""></div>
 
     <!-- Large modal -->
-    <div id="settings-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">HPulse Settings</h4>
-          </div>
-          <div class="modal-body" ng-controller="ConfigCtrl">
-
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
-                <label for="jmx-url" class="col-sm-2 control-label">JMX URL</label>
-                <div class="col-sm-8">
-                  <input type="text" class="form-control" id="jmx-url" ng-model="copy.url" disabled>
-                </div>
-                <div class="col-sm-2" ng-controller="NavCtrl">
-                  <a ng-click="goToUrl('home')" class="btn btn-default" data-dismiss="modal">New</a>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="refresh-period" class="col-sm-2 control-label">Refresh Period</label>
-                <div class="col-sm-3">
-                  <div class="input-group">
-                    <input type="number" class="form-control" id="refresh-period" ng-model="copy.refresh">
-                    <span class="input-group-addon">ms</span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="seconds-to-remember" class="col-sm-2 control-label">Seconds to Plot</label>
-                <div class="col-sm-3">
-                  <div class="input-group">
-                    <input type="number" class="form-control" id="seconds-to-remember" ng-model="copy.seconds_to_remember">
-                    <span class="input-group-addon">sec</span>
-                  </div>
-                </div>
-              </div>
-
-            </form>
-
-            <hr/>
-
-            <h5>Raw:</h5>
-            <pre>proposed: {{copy}}</pre>
-            <pre>current: {{settings}}</pre>
-
-            <div class="modal-footer">
-              <a class="btn btn-default" data-dismiss="modal">Close</a>
-              <a ng-class="{btn: true, 'btn-primary': true, disabled: synchronized}" ng-click="commit()">Commit</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div ng-include src="'views/config.html'"></div>
 
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
